# cpp_sfml_template

./: .gitmodules  CMakeLists.txt  README.md  conf.json
include/: Config.h
src/: Config.cpp  main.cpp
